Stage 1 : Final touch-ups & ReadMe update